--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Youngjin Hahm"
 description              : "별 내용 없음"
-url                      : # the base hostname & protocol for your site e.g. "https://dilettante.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : # the base hostname & protocol for your site e.g. "https://youngjinhahm.github.io"
+baseurl                  : # the subpath of your site, e.g. ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
