--- a/_config.yml
+++ b/_config.yml
@@ -167,6 +167,8 @@ include:
   - .htaccess
   - _pages
   - admin
+  - admin-config.yml
+  
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
